group 'com.demo'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'war'

processResources {
    from('src/main/java') {
        include '**/*.xml'
    }
}
apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
//apply from: 'gretty.plugin'
gretty {
    httpPort = 8080
    // 跟 jetty 插件保持一致
    contextPath = '/gssm'
    // supported values: 'jetty7', 'jetty8', 'jetty9', 'jetty93', 'jetty94', 'tomcat7', 'tomcat8'
    servletContainer = 'jetty9'
    debugPort = 5005
    debugSuspend = false
    jvmArgs = ['-Xms128m', '-Xmx512m', '-XX:PermSize=64m', '-XX:MaxPermSize=128m']
}



sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {

    compile 'org.apache.tomcat:tomcat-servlet-api:8.0.24'
    compile 'org.springframework:spring-beans:4.1.7.RELEASE'
    compile 'org.springframework:spring-web:4.1.7.RELEASE'
    compile 'org.springframework:spring-webmvc:4.1.7.RELEASE'
    compile 'org.springframework:spring-tx:4.1.7.RELEASE'
    compile 'org.aspectj:aspectjweaver:1.8.6'
    compile 'mysql:mysql-connector-java:5.1.36'
    compile 'org.mybatis:mybatis-spring:1.2.3'
    compile 'org.mybatis:mybatis:3.3.0'
    compile 'org.springframework:spring-jdbc:4.1.7.RELEASE'
    compile 'junit:junit:4.12'
    compile 'org.springframework:spring-test:4.0.5.RELEASE'
    providedCompile 'javax.servlet:servlet-api:2.5'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
    compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
    compile group: 'commons-io', name: 'commons-io', version: '2.2'
    compile group: 'javax.mail', name: 'mail', version: '1.4.7'
    compile group: 'redis.clients', name: 'jedis', version: '2.9.0'



    testCompile group: 'junit', name: 'junit', version: '4.11'
}

war{
    archiveName="gssm.war"
}
